grammar.js
    source_file: ($) =>
      seq(optional($._nl), prec.left(listSep($._element, $._nl))),

    _element: ($) =>
      choice(
        $._definition,
        $._statement,
        $._standalone_label,
        $._standalone_comment,
        $._block
      ),

    _instruction_mnemonic_op: ($) =>
      alias(mnemonicChoice(instructions), $.instruction_mnemonic),
    _instruction_mnemonic_noop: ($) =>
      alias(mnemonicChoice(instructionsNoOperands), $.instruction_mnemonic),

    // directives:

    _incbin_mnemonic: ($) =>
      alias(caseInsensitive("incbin"), $.directive_mnemonic),
    _incdir_mnemonic: ($) =>
      alias(caseInsensitive("incdir"), $.directive_mnemonic),
    _include_mnemonic: ($) =>
      alias(caseInsensitive("include"), $.directive_mnemonic),
    instruction: ($) =>
      prec.right(
        choice(
          // Instruction with operands
          seq(
            field("mnemonic", $._instruction_mnemonic_op),
            optional(seq(".", field("size", $._size))),
            seq($._ws, field("operands", $.operand_list))
          ),
          // Instruction with no operands
          seq(
            field("mnemonic", $._instruction_mnemonic_noop),
            optional(seq(".", field("size", $._size)))
          )
        )
      ),

    operand_list: ($) => listSep($._operand, $._sep),
    _operand: ($) =>
      choice($._effective_address, $.register_list, $._expression),

    _size: ($) => choice($.size, $.macro_arg),
    size: () => /[bwlsdxqBWLSDXQ]/,

    //----------------------------------------------------------------------
    // Directives:
    //----------------------------------------------------------------------

    include: ($) => seq($._include_mnemonic, $._ws, field("path", $.path)),
    include_dir: ($) => seq($._incdir_mnemonic, $._ws, field("path", $.path)),
    include_bin: ($) =>
      seq(
        $._incbin_mnemonic,
        $._ws,
        field("path", $.path),
        optional(
          seq(
            $._sep,
            field("offset", $._expression),
            optional(seq(",", field("length", $._expression))),
            optional($._sep)
          )
        )
      ),

    path: ($) => choice(/[^"'\s,]+/, $.string_literal),

    // data:

    immediate_value: ($) => seq("#", field("value", $._expression)),

    absolute_value: ($) =>
      choice(
        seq(field("value", $._expression), ".", field("size", $._size)),
        seq("(", field("value", $._expression), ").", field("size", $._size))
      ),

    _register: ($) =>
      choice(
        $.named_register,
        $.data_register,
        $.address_register,
        $.float_register
      ),

    named_register: () => choice(...registerNames.map(caseInsensitive)),

    data_register: () => /[dD][0-7]/,
    address_register: () => /[aA][0-7]/,
    float_register: () => /[fF][pP][0-7]/,

    _address: ($) =>
      field(
        "register",
        choice($.address_register, $.named_register, $._identifier)
      ),

    indirect_address: ($) => prec(2, seq("(", $._address, ")")),

    indirect_address_postinc: ($) => seq("(", $._address, ")+"),

    indirect_address_predec: ($) => prec(2, seq("-", "(", $._address, ")")),

    offset_address: ($) =>
      choice(
        seq("(", field("offset", $._expression), ",", $._address, ")"),
        seq(field("offset", $._expression), "(", $._address, ")")
      ),

    offset_address_idx: ($) =>
      prec(
        1,
        choice(
          seq(
            "(",
            field("offset", choice($._expression, $._identifier)),
            ",",
            $._address,
            ",",
            field("idx", $.idx),
            ")"
          ),
          seq(
            optional(field("offset", $._expression)),
            "(",
            $._address,
            ",",
            field("idx", $.idx),
            ")"
          )
        )
      ),

    idx: ($) =>
      seq(
        field(
          "register",
          choice(
            $.data_register,
            $.address_register,
            $.named_register,
            $._identifier
          )
        ),
        optional(seq(".", field("size", $._size))),
        optional(seq("*", field("scale", $._expression)))
      ),

    //----------------------------------------------------------------------
    // Register lists:
    //----------------------------------------------------------------------

    register_list: ($) =>
      seq($._register_list_item, repeat(seq("/", $._register_list_item))),

    _register_list_item: ($) => prec(-1, choice($.register_range, $._register)),

    register_range: ($) =>
      seq(
        field("from", $._register),
        "-",
        field("to", choice($._register, $.register_number))
      ),

    register_number: () => /[0-7]/,

    //----------------------------------------------------------------------
    // Expressions:
    //----------------------------------------------------------------------

    _expression: ($) =>
      choice(
        $._numeric_literal,
        $.string_literal,
        $.unary_expression,
        $.binary_expression,
        $.parenthesized_expression,
        $._identifier
      ),

    parenthesized_expression: ($) =>
      choice(seq("(", $._expression, ")"), seq("[", $._expression, "]")),

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(
          field("operator", alias(choice("+", "-", "!", "~"), $.operator)),
          field("operand", $._expression)
        )
      ),

    binary_expression: ($) =>
      choice(
        ...binaryOperators.map((operator, i) =>
          prec.left(
            i,
            seq(
              field("left", $._expression),
              field("operator", alias(token(seq(optional(/[ \t]+/), operator, optional(/[ \t]+/))), $.operator)),
              field("right", $._expression)
            )
          )
        )
      ),

    // Literals

    hexadecimal_literal: () => /\$[0-9A-Fa-z]+/,
    binary_literal: () => /%[01]+/,
    octal_literal: () => /@[0-7]+/,
    decimal_literal: () =>
      prec.left(choice(/\d+/, seq(optional(/\d+/), ".", /\d+/))),

    string_literal: ($) =>
      choice(
        // Single quoted
        seq(
          "'",
          repeat(
            choice(
              prec(1, /[^'\n\\]+/), // Normal chars
              "''", // Repeat quote escape
              $._string_escape_codes
            )
          ),
          "'"
        ),
        // Double quoted
        seq(
          '"',
          repeat(choice(prec(1, /[^"\n\\]+/), '""', $._string_escape_codes)),
          '"'
        )
      ),

    _string_escape_codes: ($) =>
      choice(
        /\\[\\bfnrt"'e]/, // Single char escape codes
        /\\[0-7]+/, // Octal character code
        /\\[xX][0-9a-f]+/, // Hex charcter code
        $.macro_arg
      ),

    //----------------------------------------------------------------------
    // Identifiers
    //----------------------------------------------------------------------

    _identifier: ($) =>
      choice($.symbol, $.interpolated, $.macro_arg, $._builtin),

    macro_arg: () =>
      choice(
        /[0-9]/,
        "\\@",
        "\\@!",
        "\\@?",
        "\\@@",
        "\\#",
        /\\\?[0-9]/,
        "\\.",
        "\\+",
        "\\-",
        /\\\.?[a-zA-Z][a-zA-Z0-9_]*/,
        /\\\$\.?[a-zA-Z][a-zA-Z0-9_]*/,
        /\\<[^>]+>/
      ),

    // Symbol containing one or more macro args
    // e.g. foo\1bar
    interpolated: ($) =>
      prec.right(
        1,
        seq(
          optional("."),
          optional($._symbol_chars),
          repeat1(
            prec.right(-1,
              seq($.macro_arg, optional($._symbol_chars))
            ),
          ),
          optional("$")
        )
      ),

    reptn: () => caseInsensitive("reptn"),
    carg: () => caseInsensitive("carg"),
    narg: () => caseInsensitive("narg"),
    symbol: ($) =>
      prec.right(
        seq(repeat1(seq(optional("."), $._symbol_chars)), optional("$"))
      ),
    _symbol_chars: () => /([a-zA-Z0-9_%]|(\\?\\\.))+/,

    //----------------------------------------------------------------------
    // Misc:
    //----------------------------------------------------------------------

    _sep: () => /\s*,\s*/,
    _ws: () => /[ \t]+/,
    _nl: () => /([ \t]*(\r\n|\n|\r))+/,
  },
});

function listSep(rule, sep = ",") {
  return seq(repeat(seq(rule, sep)), rule, optional(sep));
}

function toCaseInsensitive(a) {
  var ca = a.charCodeAt(0);
  if (ca >= 97 && ca <= 122) return `[${a}${a.toUpperCase()}]`;
  if (ca >= 65 && ca <= 90) return `[${a.toLowerCase()}${a}]`;
  return a;
}

function caseInsensitive(keyword) {
  return new RegExp(keyword.split("").map(toCaseInsensitive).join(""));
}

function mnemonicChoice(options) {
  return caseInsensitive(options.join("|"));
}
